--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header class="bg-light">
+      <!-- Navogaition Bar -->
+
+      <nav class="nav-bar display-flex">
+        <h3 class="brand">G3 Architects</h3>
+        <ul class="nav-lists display-flex">
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Login</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- Banner Section -->
+
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="banner-img" src="images/banner.png" alt="" />
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
