--- a/index.html
+++ b/index.html
@@ -42,7 +42,83 @@
         <img class="banner-img" src="images/banner.png" alt="" />
       </div>
     </header>
-    <main></main>
+
+    <main>
+      <!-- Team Features -->
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="our-features">
+          <h2 class="section-titile">
+            <span id="qick-list" class="text-light-gray">Quick list </span>of
+            Our <br /><span class="text-primary">Features</span>
+          </h2>
+          <p class="features-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!-- Love & Enjoy Features -->
+      <section>
+        <h3 class="section-titile">Some Facts</h3>
+        <p class="text-light-gray fact-descriptions">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-container">
+          <!-- .fact-card*4>img.fact-icon+h4-number+h5.fact-name -->
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/ribon.png" alt="" class="fact-icon" />
+              <h4 class="fac-number text-gray">54</h4-number>
+              <h5 class="fact-name text-light-gray">Awards Winnings</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div><img src="images/icons/projects.png" alt="" class="fact-icon" />
+              <h4 class="fac-number text-gray">2000</h4>
+              <h5 class="fact-name text-light-gray">Complate projects</h5></div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/customers.png" alt="" class="fact-icon" />
+            <h4 class="fac-number text-gray">590</h4r>
+            <h5 class="fact-name text-light-gray">Clients Worked</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/email.png" alt="" class="fact-icon" />
+            <h4 class="fac-number text-gray">520 </h4>
+            <h5 class="fact-name text-light-gray">Email Send</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our Sponsor -->
+      <section class="our-sponsor"> 
+        <div class="sponsor-info">
+          <h3 class="section-titile">Our Sponsor</h3>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="sponsor-logo">
+          <img src="images/sponsors/amazon.png" alt="">
+          <img src="images/sponsors/figma.png" alt="">
+          <img src="images/sponsors/google.png" alt="">
+          <img src="images/sponsors/spotify.png" alt="">
+          <img src="images/sponsors/telerama.png" alt="">
+        </div>
+
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
